added home page UI

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="tw-max-w-3xl tw-w-full tw-m-auto tw-pt-14 tw-pb-12 tw-h-screen">
+<div class="tw-max-w-3xl tw-w-full tw-m-auto tw-pt-14 tw-pb-12 tw-min-h-screen">
   <header class="tw-h-14 tw-px-3 tw-flex tw-items-center tw-justify-between tw-bg-white tw-z-10 tw-fixed tw-top-0 tw-left-2/4 tw--translate-x-2/4 tw-max-w-3xl tw-w-full tw-shadow-[0px_2px_2px_0px_rgba(0,0,0,0.1)]">
     <div>
       <svg xmlns="http://www.w3.org/2000/svg" class="tw-mb-[3px]" width="109" height="23" viewBox="0 0 109 23" fill="none">
@@ -14,7 +14,7 @@
     </button>
   </header>
 
-  <div class="tw-min-h-[calc(100vh-104px)] tw-w-full tw-overflow-x-hidden tw-border tw-border-t-0 tw-border-solid tw-border-[rgba(0,0,0,0.1)]">
+  <div class="tw-w-full tw-overflow-x-hidden tw-border tw-border-t-0 tw-border-solid tw-border-[rgba(0,0,0,0.1)]">
     <router-outlet />
   </div>
   <footer class="tw-fixed tw-bottom-0 tw-left-2/4 tw--translate-x-2/4 tw-h-12 tw-max-w-3xl tw-w-full tw-bg-[#05162E] tw-z-10">
