Demerged header and footer

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -156,7 +156,7 @@
       >Categories</span
     >
   </h2>
-  <div class="tw-overflow-x-auto tw-flex tw-flex-row tw-gap-[17px] tw-ml-4">
+  <div class="tw-flex tw-flex-row tw-overflow-x-auto tw-gap-[17px]">
     <!-- Loop through categories to create a horizontal list -->
     <div
       class="tw-w-[165px] tw-h-[142px] tw-rounded-[4px] tw-px-[6px] tw-py-[9px] tw-shadow-[0px_4px_4px_4px_rgba(0,0,0,0.05)]"
