make categories scrollable

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -76,7 +76,7 @@
   <div class="tw-flex tw-flex-row tw-gap-[17px]"></div>
   <div class="tw-flex tw-flex-row tw-overflow-x-auto tw-gap-[17px]">
     <div
-      class="tw-w-[143px] tw-h-[185px] tw-rounded-[4px_0px_0px_0px] tw-px-[6px] tw-py-[9px] tw-shadow-[0px_4px_4px_4px_rgba(0,0,0,0.05)]"
+      class="tw-w-[143px] tw-h-[185px] tw-my-2 tw-rounded-[4px_0px_0px_0px] tw-px-[6px] tw-py-[9px] tw-shadow-[0px_4px_4px_4px_rgba(0,0,0,0.05)]"
       *ngFor="let item of getMenuItemsForSelectedCategory()"
     >
       <figure
@@ -156,10 +156,10 @@
       >Categories</span
     >
   </h2>
-  <div class="tw-flex tw-flex-row tw-overflow-x-auto tw-gap-[17px]">
+  <div class="tw-w-full tw-overflow-x-auto tw-whitespace-nowrap">
     <!-- Loop through categories to create a horizontal list -->
     <div
-      class="tw-w-[165px] tw-h-[142px] tw-rounded-[4px] tw-px-[6px] tw-py-[9px] tw-shadow-[0px_4px_4px_4px_rgba(0,0,0,0.05)]"
+      class="tw-w-[165px] tw-h-[142px] tw-mr-[17px] tw-my-2 tw-inline-block tw-rounded-[4px] tw-px-[6px] tw-py-[9px] tw-shadow-[0px_4px_4px_4px_rgba(0,0,0,0.05)]"
       *ngFor="let item of getAllCategory()"
     >
       <figure
