Added add subtract quantity functionality for item list

--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -1,24 +1,62 @@
-<div class="tw-h-14 tw-bg-white tw-flex tw-justify-between tw-items-center tw-pr-3">
+<div
+  class="tw-h-14 tw-bg-white tw-flex tw-justify-between tw-items-center tw-pr-3"
+>
   <button class="tw-border-0 tw-outline-none tw-bg-white tw-p-3">
-    <svg xmlns="http://www.w3.org/2000/svg" width="8" height="14" viewBox="0 0 8 14" fill="none">
-      <path d="M0.322079 7.41992L5.98208 13.0699C6.07504 13.1637 6.18564 13.238 6.3075 13.2888C6.42936 13.3396 6.56007 13.3657 6.69208 13.3657C6.82409 13.3657 6.9548 13.3396 7.07666 13.2888C7.19851 13.238 7.30912 13.1637 7.40208 13.0699C7.58833 12.8826 7.69287 12.6291 7.69287 12.3649C7.69287 12.1007 7.58833 11.8473 7.40208 11.6599L2.45208 6.65992L7.40208 1.70992C7.58833 1.52256 7.69287 1.26911 7.69287 1.00492C7.69287 0.740739 7.58833 0.487288 7.40208 0.299925C7.30946 0.205437 7.19902 0.130266 7.07714 0.0787697C6.95527 0.0272732 6.82439 0.00047493 6.69208 -7.43866e-05C6.55977 0.00047493 6.42889 0.0272732 6.30701 0.0787697C6.18514 0.130266 6.07469 0.205437 5.98208 0.299925L0.322079 5.94992C0.220574 6.04357 0.139565 6.15722 0.0841579 6.28372C0.0287504 6.41022 0.000145912 6.54682 0.000145912 6.68492C0.000145912 6.82303 0.0287504 6.95963 0.0841579 7.08613C0.139565 7.21263 0.220574 7.32628 0.322079 7.41992Z" fill="#424242"/>
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      width="8"
+      height="14"
+      viewBox="0 0 8 14"
+      fill="none"
+    >
+      <path
+        d="M0.322079 7.41992L5.98208 13.0699C6.07504 13.1637 6.18564 13.238 6.3075 13.2888C6.42936 13.3396 6.56007 13.3657 6.69208 13.3657C6.82409 13.3657 6.9548 13.3396 7.07666 13.2888C7.19851 13.238 7.30912 13.1637 7.40208 13.0699C7.58833 12.8826 7.69287 12.6291 7.69287 12.3649C7.69287 12.1007 7.58833 11.8473 7.40208 11.6599L2.45208 6.65992L7.40208 1.70992C7.58833 1.52256 7.69287 1.26911 7.69287 1.00492C7.69287 0.740739 7.58833 0.487288 7.40208 0.299925C7.30946 0.205437 7.19902 0.130266 7.07714 0.0787697C6.95527 0.0272732 6.82439 0.00047493 6.69208 -7.43866e-05C6.55977 0.00047493 6.42889 0.0272732 6.30701 0.0787697C6.18514 0.130266 6.07469 0.205437 5.98208 0.299925L0.322079 5.94992C0.220574 6.04357 0.139565 6.15722 0.0841579 6.28372C0.0287504 6.41022 0.000145912 6.54682 0.000145912 6.68492C0.000145912 6.82303 0.0287504 6.95963 0.0841579 7.08613C0.139565 7.21263 0.220574 7.32628 0.322079 7.41992Z"
+        fill="#424242"
+      />
     </svg>
   </button>
-  <span class="tw-text-[#424242] tw-font-semibold tw-text-sm tw-leading-[17px]">Item List</span>
+  <span class="tw-text-[#424242] tw-font-semibold tw-text-sm tw-leading-[17px]"
+    >Item List</span
+  >
   <button class="tw-border-0 tw-outline-none tw-bg-white">
-    <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26" fill="none">
-      <path fill-rule="evenodd" clip-rule="evenodd" d="M15.7579 12.0031H19.3561C19.9017 12.0031 20.3304 11.552 20.3304 11.0081C20.3304 10.4509 19.9017 10.0131 19.3561 10.0131H15.7579C15.2124 10.0131 14.7837 10.4509 14.7837 11.0081C14.7837 11.552 15.2124 12.0031 15.7579 12.0031ZM23.6295 5.10574C24.4219 5.10574 24.9415 5.38434 25.4611 5.9946C25.9807 6.60487 26.0716 7.48047 25.9547 8.27514L24.7207 16.978C24.4869 18.651 23.084 19.8834 21.4343 19.8834H7.2623C5.53465 19.8834 4.10576 18.5316 3.96288 16.7804L2.76781 2.31842L0.806336 1.97349C0.286741 1.88063 -0.0769752 1.36323 0.0139539 0.832563C0.104883 0.289959 0.611488 -0.0695666 1.14407 0.0113598L4.24216 0.487631C4.68381 0.568558 5.00856 0.938696 5.04753 1.38976L5.29434 4.36148C5.33331 4.78734 5.67104 5.10574 6.08672 5.10574H23.6295ZM7.05449 21.9803C5.96334 21.9803 5.08003 22.8825 5.08003 23.9969C5.08003 25.098 5.96334 26.0001 7.05449 26.0001C8.13265 26.0001 9.01596 25.098 9.01596 23.9969C9.01596 22.8825 8.13265 21.9803 7.05449 21.9803ZM21.6681 21.9803C20.5769 21.9803 19.6936 22.8825 19.6936 23.9969C19.6936 25.098 20.5769 26.0001 21.6681 26.0001C22.7462 26.0001 23.6295 25.098 23.6295 23.9969C23.6295 22.8825 22.7462 21.9803 21.6681 21.9803Z" fill="#05162E"/>
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      width="26"
+      height="26"
+      viewBox="0 0 26 26"
+      fill="none"
+    >
+      <path
+        fill-rule="evenodd"
+        clip-rule="evenodd"
+        d="M15.7579 12.0031H19.3561C19.9017 12.0031 20.3304 11.552 20.3304 11.0081C20.3304 10.4509 19.9017 10.0131 19.3561 10.0131H15.7579C15.2124 10.0131 14.7837 10.4509 14.7837 11.0081C14.7837 11.552 15.2124 12.0031 15.7579 12.0031ZM23.6295 5.10574C24.4219 5.10574 24.9415 5.38434 25.4611 5.9946C25.9807 6.60487 26.0716 7.48047 25.9547 8.27514L24.7207 16.978C24.4869 18.651 23.084 19.8834 21.4343 19.8834H7.2623C5.53465 19.8834 4.10576 18.5316 3.96288 16.7804L2.76781 2.31842L0.806336 1.97349C0.286741 1.88063 -0.0769752 1.36323 0.0139539 0.832563C0.104883 0.289959 0.611488 -0.0695666 1.14407 0.0113598L4.24216 0.487631C4.68381 0.568558 5.00856 0.938696 5.04753 1.38976L5.29434 4.36148C5.33331 4.78734 5.67104 5.10574 6.08672 5.10574H23.6295ZM7.05449 21.9803C5.96334 21.9803 5.08003 22.8825 5.08003 23.9969C5.08003 25.098 5.96334 26.0001 7.05449 26.0001C8.13265 26.0001 9.01596 25.098 9.01596 23.9969C9.01596 22.8825 8.13265 21.9803 7.05449 21.9803ZM21.6681 21.9803C20.5769 21.9803 19.6936 22.8825 19.6936 23.9969C19.6936 25.098 20.5769 26.0001 21.6681 26.0001C22.7462 26.0001 23.6295 25.098 23.6295 23.9969C23.6295 22.8825 22.7462 21.9803 21.6681 21.9803Z"
+        fill="#05162E"
+      />
     </svg>
   </button>
 </div>
 
 <div class="tw-bg-[#05162E] tw-h-[49px]">
-  <nav class="tw-block tw-h-full tw-overflow-x-auto tw-overflow-y-hidden tw-w-full">
-    <ul class="tw-flex tw-justify-start tw-items-center tw-gap-[38px] tw-h-full tw-min-w-full tw-flex-row">
-      <li><a href="#" class="tw-text-xs tw-whitespace-nowrap tw-leading-[14px] tw-text-white tw-opacity-40">Icecekler</a></li>
-      <li><a href="#" class="tw-text-sm tw-whitespace-nowrap tw-leading-[17px] tw-text-white tw-font-semibold">Fast Food</a></li>
-      <li><a href="#" class="tw-text-xs tw-whitespace-nowrap tw-leading-[14px] tw-text-white tw-opacity-40">Meat and Fish</a></li>
-      <li><a href="#" class="tw-text-xs tw-whitespace-nowrap tw-leading-[14px] tw-text-white tw-opacity-40">Fresh Vegetables</a></li>
+  <nav
+    class="tw-block tw-h-full tw-overflow-x-auto tw-overflow-y-hidden tw-w-full"
+  >
+    <ul
+      class="tw-flex tw-justify-start tw-items-center tw-gap-[38px] tw-h-full tw-min-w-full tw-flex-row"
+    >
+      <li *ngFor="let category of categories">
+        <a
+          class="tw-whitespace-nowrap tw-text-white"
+          [ngClass]="{
+            'tw-text-sm tw-leading-[17px] tw-font-semibold':
+              category.categoryId === selectedCategory?.categoryId,
+            'tw-text-xs tw-leading-[14px] tw-opacity-40':
+              category.categoryId !== selectedCategory?.categoryId
+          }"
+          (click)="selectCategory(category)"
+        >
+          {{ category.categoryName }}
+        </a>
+      </li>
     </ul>
   </nav>
 </div>
@@ -26,196 +64,65 @@
 <div class="tw-bg-white tw-px-3 tw-py-[19px]">
   <div class="tw-flex tw-flex-row tw-gap-[17px] tw-flex-wrap tw-justify-center">
     <div
-      class="tw-w-[165px] tw-h-[213px] tw-rounded-[4px_0px_0px_0px] tw-px-[6px] tw-py-[9px] tw-shadow-[0px_4px_4px_4px_rgba(0,0,0,0.05)]"
+      class="tw-w-[165px] tw-h-[213px] tw-rounded-[4px] tw-px-[6px] tw-py-[9px] tw-shadow-[0px_4px_4px_4px_rgba(0,0,0,0.05)]"
+      *ngFor="let item of getMenuItemsForSelectedCategory()"
     >
       <figure
         class="tw-flex tw-w-full tw-items-center tw-flex-col tw-text-center tw-mb-4"
       >
-      <div class="tw-mt-[14px] tw-mb-[23px] tw-h-24">
-        <img
-          class="tw-w-full tw-h-auto tw-max-h-24 tw-max-w-[82px]"
-          src="../../assets/images/list-item-1.png"
-          alt="list-item-1"
-        />
-      </div>
+        <div class="tw-mt-[14px] tw-mb-[23px] tw-h-24">
+          <img
+            class="tw-w-full tw-h-auto tw-max-h-24 tw-max-w-[82px]"
+            src="../../assets/images/list-item-1.png"
+            alt="{{ item.itemName }}"
+          />
+        </div>
         <figcaption
           class="tw-text-[11px] tw-font-medium tw-leading-[13px] tw-text-[#424242]"
         >
-          Foodish Cheeseburger
+          {{ item.itemName }}
         </figcaption>
       </figure>
       <div class="tw-flex tw-flex-row tw-justify-between tw-items-center">
         <span
           class="tw-text-base tw-leading-[19px] tw-font-medium tw-text-[#FF7D0B]"
-          >₹ 150</span
         >
+          ₹ {{ item.price }}
+        </span>
         <button
           class="tw-w-[72px] tw-h-6 tw-rounded-[3px] tw-border tw-border-solid tw-border-[#F6A60B] tw-text-[#F6A60B] tw-text-[13px] tw-leading-[15px]"
+          *ngIf="showAddButton(item)"
+          (click)="selectItem(item)"
         >
           Add
         </button>
-      </div>
-    </div>
-    <div
-      class="tw-w-[165px] tw-h-[213px] tw-rounded-[4px_0px_0px_0px] tw-px-[6px] tw-py-[9px] tw-shadow-[0px_4px_4px_4px_rgba(0,0,0,0.05)]"
-    >
-      <figure
-        class="tw-flex tw-w-full tw-items-center tw-flex-col tw-text-center tw-mb-4"
-      >
-      <div class="tw-mt-[14px] tw-mb-[23px]">
-        <img
-          class="tw-w-full tw-h-auto tw-max-h-24 tw-max-w-[82px]"
-          src="../../assets/images/list-item-2.png"
-          alt="list-item-1"
-        />
-      </div>
-        <figcaption
-          class="tw-text-[11px] tw-font-medium tw-leading-[13px] tw-text-[#424242]"
-        >
-          Foodish Cheeseburger
-        </figcaption>
-      </figure>
-      <div class="tw-flex tw-flex-row tw-justify-between tw-items-center">
         <span
-          class="tw-text-base tw-leading-[19px] tw-font-medium tw-text-[#FF7D0B]"
-          >₹ 150</span
+          *ngIf="showIncrementDecrementButtons(item)"
+          class="tw-inline-flex tw-border tw-border-solid tw-border-[#F6A60B] tw-rounded-[3px] tw-w-[75px] tw-h-[25px]"
         >
-        <button
-          class="tw-w-[72px] tw-h-6 tw-rounded-[3px] tw-border tw-border-solid tw-border-[#F6A60B] tw-text-[#F6A60B] tw-text-[13px] tw-leading-[15px]"
-        >
-          Add
-        </button>
+          <button
+            (click)="reduceItem(item)"
+            class="tw-w-[25px] tw-text-[#F6A60B] tw-text-base tw-leading-[18px]"
+          >
+            -
+          </button>
+          <span
+            class="tw-w-[25px] tw-text-white tw-text-[15px] tw-leading-[18px] tw-bg-[#F6A60B] tw-inline-flex tw-justify-center tw-items-center"
+            >{{ getItemQuantity(item) }}</span
+          >
+          <button
+            (click)="increaseItem(item)"
+            class="tw-w-[25px] tw-text-[#F6A60B] tw-text-base tw-leading-[18px]"
+          >
+            +
+          </button>
+        </span>
       </div>
     </div>
-    <div
-    class="tw-w-[165px] tw-h-[213px] tw-rounded-[4px_0px_0px_0px] tw-px-[6px] tw-py-[9px] tw-shadow-[0px_4px_4px_4px_rgba(0,0,0,0.05)]"
-  >
-    <figure
-      class="tw-flex tw-w-full tw-items-center tw-flex-col tw-text-center tw-mb-4"
-    >
-    <div class="tw-mt-[14px] tw-mb-[23px] tw-h-24">
-      <img
-        class="tw-w-full tw-h-auto tw-max-h-24 tw-max-w-[82px]"
-        src="../../assets/images/list-item-1.png"
-        alt="list-item-1"
-      />
-    </div>
-      <figcaption
-        class="tw-text-[11px] tw-font-medium tw-leading-[13px] tw-text-[#424242]"
-      >
-        Foodish Cheeseburger
-      </figcaption>
-    </figure>
-    <div class="tw-flex tw-flex-row tw-justify-between tw-items-center">
-      <span
-        class="tw-text-base tw-leading-[19px] tw-font-medium tw-text-[#FF7D0B]"
-        >₹ 150</span
-      >
-      <button
-        class="tw-w-[72px] tw-h-6 tw-rounded-[3px] tw-border tw-border-solid tw-border-[#F6A60B] tw-text-[#F6A60B] tw-text-[13px] tw-leading-[15px]"
-      >
-        Add
-      </button>
-    </div>
-  </div>
-  <div
-    class="tw-w-[165px] tw-h-[213px] tw-rounded-[4px_0px_0px_0px] tw-px-[6px] tw-py-[9px] tw-shadow-[0px_4px_4px_4px_rgba(0,0,0,0.05)]"
-  >
-    <figure
-      class="tw-flex tw-w-full tw-items-center tw-flex-col tw-text-center tw-mb-4"
-    >
-    <div class="tw-mt-[14px] tw-mb-[23px]">
-      <img
-        class="tw-w-full tw-h-auto tw-max-h-24 tw-max-w-[82px]"
-        src="../../assets/images/list-item-2.png"
-        alt="list-item-1"
-      />
-    </div>
-      <figcaption
-        class="tw-text-[11px] tw-font-medium tw-leading-[13px] tw-text-[#424242]"
-      >
-        Foodish Cheeseburger
-      </figcaption>
-    </figure>
-    <div class="tw-flex tw-flex-row tw-justify-between tw-items-center">
-      <span
-        class="tw-text-base tw-leading-[19px] tw-font-medium tw-text-[#FF7D0B]"
-        >₹ 150</span
-      >
-      <button
-        class="tw-w-[72px] tw-h-6 tw-rounded-[3px] tw-border tw-border-solid tw-border-[#F6A60B] tw-text-[#F6A60B] tw-text-[13px] tw-leading-[15px]"
-      >
-        Add
-      </button>
-    </div>
-  </div>
-  <div
-  class="tw-w-[165px] tw-h-[213px] tw-rounded-[4px_0px_0px_0px] tw-px-[6px] tw-py-[9px] tw-shadow-[0px_4px_4px_4px_rgba(0,0,0,0.05)]"
->
-  <figure
-    class="tw-flex tw-w-full tw-items-center tw-flex-col tw-text-center tw-mb-4"
-  >
-  <div class="tw-mt-[14px] tw-mb-[23px] tw-h-24">
-    <img
-      class="tw-w-full tw-h-auto tw-max-h-24 tw-max-w-[82px]"
-      src="../../assets/images/list-item-1.png"
-      alt="list-item-1"
-    />
-  </div>
-    <figcaption
-      class="tw-text-[11px] tw-font-medium tw-leading-[13px] tw-text-[#424242]"
-    >
-      Foodish Cheeseburger
-    </figcaption>
-  </figure>
-  <div class="tw-flex tw-flex-row tw-justify-between tw-items-center">
-    <span
-      class="tw-text-base tw-leading-[19px] tw-font-medium tw-text-[#FF7D0B]"
-      >₹ 150</span
-    >
-    <button
-      class="tw-w-[72px] tw-h-6 tw-rounded-[3px] tw-border tw-border-solid tw-border-[#F6A60B] tw-text-[#F6A60B] tw-text-[13px] tw-leading-[15px]"
-    >
-      Add
-    </button>
   </div>
 </div>
-<div
-  class="tw-w-[165px] tw-h-[213px] tw-rounded-[4px_0px_0px_0px] tw-px-[6px] tw-py-[9px] tw-shadow-[0px_4px_4px_4px_rgba(0,0,0,0.05)]"
->
-  <figure
-    class="tw-flex tw-w-full tw-items-center tw-flex-col tw-text-center tw-mb-4"
-  >
-  <div class="tw-mt-[14px] tw-mb-[23px]">
-    <img
-      class="tw-w-full tw-h-auto tw-max-h-24 tw-max-w-[82px]"
-      src="../../assets/images/list-item-2.png"
-      alt="list-item-1"
-    />
-  </div>
-    <figcaption
-      class="tw-text-[11px] tw-font-medium tw-leading-[13px] tw-text-[#424242]"
-    >
-      Foodish Cheeseburger
-    </figcaption>
-  </figure>
-  <div class="tw-flex tw-flex-row tw-justify-between tw-items-center">
-    <span
-      class="tw-text-base tw-leading-[19px] tw-font-medium tw-text-[#FF7D0B]"
-      >₹ 150</span
-    >
-    <button
-      class="tw-w-[72px] tw-h-6 tw-rounded-[3px] tw-border tw-border-solid tw-border-[#F6A60B] tw-text-[#F6A60B] tw-text-[13px] tw-leading-[15px]"
-    >
-      Add
-    </button>
-  </div>
-</div>
-  </div>
-</div>
-
+<!-- 
 <div class="category-list">
-    <!-- Display all categories as buttons -->
     <button
       *ngFor="let category of categories"
       (click)="selectCategory(category)"
@@ -226,7 +133,6 @@
   </div>
   
   <div class="menu-list">
-    <!-- Display menu items for the selected category -->
     <div *ngFor="let item of getMenuItemsForSelectedCategory()">
       <p>{{ item.itemName }} - {{ item.price | currency : "INR" : "₹" }}</p>
       <button
@@ -237,11 +143,10 @@
         Add
       </button>
       <div *ngIf="showIncrementDecrementButtons(item)">
-        <!-- Apply the same CSS class to the "+" and "-" buttons -->
         <button class="button" (click)="increaseItem(item)">+</button>
         {{ getItemQuantity(item) }}
         <button class="button" (click)="reduceItem(item)">-</button>
       </div>
     </div>
   </div>
-  
+   -->
