Updated back button, header and footer value updated with cartcount

--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -1,7 +1,7 @@
 <div
   class="tw-h-14 tw-bg-white tw-flex tw-justify-between tw-items-center tw-pr-3"
 >
-  <button class="tw-border-0 tw-outline-none tw-bg-white tw-p-3">
+  <button class="tw-border-0 tw-outline-none tw-bg-white tw-p-3" (click)="backButtonClicked()">
     <svg
       xmlns="http://www.w3.org/2000/svg"
       width="8"
