--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,7 +4,7 @@
   <div
     class="tw-text-white tw-text-center tw-text-xs tw-font-semibold tw-leading-[14.63px] tw-pt-[7px] tw-pb-[6px] tw-flex tw-flex-col tw-justify-between tw-gap-[6px]"
   >
-    <p>0 Items Added in cart !</p>
+    <p>{{ cartCount }} Items Added in cart !</p>
     <p>You have not selected anything</p>
   </div>
 </footer>
