--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,7 +4,25 @@
   <div
     class="tw-text-white tw-text-center tw-text-xs tw-font-semibold tw-leading-[14.63px] tw-pt-[7px] tw-pb-[6px] tw-flex tw-flex-col tw-justify-between tw-gap-[6px]"
   >
-    <p>{{ cartCount }} Items Added in cart !</p>
-    <p>You have not selected anything</p>
+    <p class="tw-items-center">
+      {{ cartCount }} Items Added in cart !
+      <svg
+        width="14"
+        height="8"
+        viewBox="0 0 14 8"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+        *ngIf="cartCount > 0"
+        style="display: inline-block; vertical-align: middle"
+      >
+        <path
+          id="Arrow 1"
+          d="M13.8536 4.35355C14.0488 4.15829 14.0488 3.84171 13.8536 3.64645L10.6716 0.464466C10.4763 0.269204 10.1597 0.269204 9.96447 0.464466C9.7692 0.659728 9.7692 0.976311 9.96447 1.17157L12.7929 4L9.96447 6.82843C9.7692 7.02369 9.7692 7.34027 9.96447 7.53553C10.1597 7.7308 10.4763 7.7308 10.6716 7.53553L13.8536 4.35355ZM0 4.5H13.5V3.5H0V4.5Z"
+          fill="white"
+        />
+      </svg>
+    </p>
+    <p *ngIf="cartCount === 0">You have not selected anything</p>
+    <p *ngIf="cartCount > 0">Proceed to checkout</p>
   </div>
 </footer>
