--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
-<div class="tw-max-w-3xl tw-w-full tw-m-auto tw-pt-14 tw-pb-12 tw-min-h-screen">
-  <app-header></app-header>
+<div
+  class="tw-max-w-3xl tw-w-full tw-m-auto tw-min-h-screen"
+  [ngClass]="showHeader ? 'tw-pt-14 tw-pb-12' : ''"
+>
+  <app-header *ngIf="showHeader"></app-header>
 
   <div
     class="tw-w-full tw-overflow-x-hidden tw-border tw-border-t-0 tw-border-solid tw-border-[rgba(0,0,0,0.1)]"
